[package]
name = "oui"
version = "0.1.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]

[dependencies.nanovg]
#path = "../nanovg-rs"
git = "https://github.com/KevinKelley/nanovg-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"


[[lib]]
name = "oui"
path = "src/lib.rs"


# [[bin]]
# name = "oui"
# path = "src/main.rs"
